--- a/fractal_from_random.ipynb
+++ b/fractal_from_random.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -70,7 +70,7 @@
     "def choosePts(npts,fixedpts,frac):\n",
     "    #chooses a vertex at random\n",
     "    #further rules could be applied here\n",
-    "    roll = floor(npts*np.random.random())\n",
+    "    roll = np.floor(npts*np.random.random())\n",
     "    point = fixedpts[int(roll)]\n",
     "    \n",
     "    return point"
@@ -115,16 +115,17 @@
     "    # set axes range\n",
     "    plt.xlim(-0.05,1.05)\n",
     "    plt.ylim(-0.05,1.05)\n",
-    "    \n",
-    "    plt.axes().set_aspect('equal')\n",
+    "    plt.axis('equal')\n",
     "    \n",
     "    #plots the verticies\n",
-    "    plt.scatter(transpose(fixedpts)[0],transpose(fixedpts)[1],alpha=0.8, c='black', edgecolors='none', s=30)\n",
+    "    plt.scatter(np.transpose(fixedpts)[0],np.transpose(fixedpts)[1],alpha=0.8, c='black', edgecolors='none', s=30)\n",
     "    #plots the starting point\n",
     "    plt.scatter(start[0],start[1],alpha=0.8, c='red', edgecolors='none', s=30)    \n",
     "    #plots the itterated points\n",
-    "    plt.scatter(transpose(ittpts)[0],transpose(ittpts)[1],alpha=0.5, c='blue', edgecolors='none', s=2)\n",
+    "    plt.scatter(np.transpose(ittpts)[0],np.transpose(ittpts)[1],alpha=0.5, c='blue', edgecolors='none', s=2)\n",
     "    \n",
+    "    \n",
+    "    plt.show()\n",
     "    return"
    ]
   },
@@ -152,13 +153,13 @@
     "        fixedpts = [] #Random Verticies\n",
     "    else:\n",
     "        if npts == 3:\n",
-    "            fixedpts = [(0.0,0.0),(1.0,0.0),(0.5,0.5*sqrt(3.0))] #Equilateral Triangle (npts = 3)\n",
+    "            fixedpts = [(0.0,0.0),(1.0,0.0),(0.5,0.5*np.sqrt(3.0))] #Equilateral Triangle (npts = 3)\n",
     "        elif npts == 4:\n",
     "            fixedpts = [(0.0,0.0),(1.0,0.0),(1.0,1.0),(0.0,1.0)] #Square\n",
     "        elif npts == 5:\n",
-    "            fixedpts = [(0.0,2./(1+sqrt(5.))),(0.5-2./(5+sqrt(5.)),0.0),(0.5,1.0),(0.5+2./(5+sqrt(5.)),0.0),(1.0,2./(1+sqrt(5.)))] #Regular Pentagon\n",
+    "            fixedpts = [(0.0,2./(1+np.sqrt(5.))),(0.5-2./(5+np.sqrt(5.)),0.0),(0.5,1.0),(0.5+2./(5+np.sqrt(5.)),0.0),(1.0,2./(1+np.sqrt(5.)))] #Regular Pentagon\n",
     "        elif npts == 6:\n",
-    "            fixedpts = [(0.0,0.5),(1./4,0.5+.25*sqrt(3.)),(3./4,0.5+.25*sqrt(3.)),(1.0,0.5),(3./4,0.5-.25*sqrt(3.)),(1./4,0.5-.25*sqrt(3.))] #Regular Hexagon\n",
+    "            fixedpts = [(0.0,0.5),(1./4,0.5+.25*np.sqrt(3.)),(3./4,0.5+.25*np.sqrt(3.)),(1.0,0.5),(3./4,0.5-.25*np.sqrt(3.)),(1./4,0.5-.25*np.sqrt(3.))] #Regular Hexagon\n",
     "        elif npts == 2:\n",
     "            fixedpts = [(0.0,0.0),(1.0,1.0)] #Line\n",
     "        elif npts == 1:\n",
@@ -180,7 +181,7 @@
     "        print(\"The number of verticies don't match the length of the list of verticies. If you want the verticies generated at random, set fixedpts to []\")\n",
     "        return\n",
     "    if len(fixedpts) != 0:\n",
-    "        print(\"Fractal Dimension = {}\".format(-log(npts)/log(frac)))\n",
+    "        print(\"Fractal Dimension = {}\".format(-np.log(npts)/np.log(frac)))\n",
     "    \n",
     "        \n",
     "    (start, fixedpts) = placeStartpoint(npts,fixedpts)\n",
@@ -479,11 +480,11 @@
     "                xypts.append((x,y))\n",
     "            cond = cond + f[j][0]\n",
     "            \n",
-    "    xmax,ymax = max(abs(transpose(xypts)[0])),max(abs(transpose(xypts)[1]))\n",
+    "    xmax,ymax = max(abs(np.transpose(xypts)[0])),max(abs(np.transpose(xypts)[1]))\n",
     "    plt.axes().set_aspect('equal')\n",
-    "    color = transpose([[abs(r)/xmax for r in transpose(xypts)[0]],[abs(g)/ymax for g in transpose(xypts)[1]],[b/itt for b in range(itt)]])\n",
+    "    color = np.transpose([[abs(r)/xmax for r in np.transpose(xypts)[0]],[abs(g)/ymax for g in np.transpose(xypts)[1]],[b/itt for b in range(itt)]])\n",
     "    \n",
-    "    plt.scatter(transpose(xypts)[0],transpose(xypts)[1],alpha=0.5, facecolors=color, edgecolors='none', s=1)\n",
+    "    plt.scatter(np.transpose(xypts)[0],np.transpose(xypts)[1],alpha=0.5, facecolors=color, edgecolors='none', s=1)\n",
     "    "
    ]
   },
@@ -531,6 +532,13 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -538,7 +546,7 @@
    "formats": "ipynb,md"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -552,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.8.10"
   },
   "nav_menu": {},
   "toc": {
