updates to fractal for class

--- a/fractal_from_random.ipynb
+++ b/fractal_from_random.ipynb
@@ -31,7 +31,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This notebook details how to generate fractals from random points.\n",
+    "\n",
+    "To get started, checkout this video by [Numberphile](https://www.youtube.com/watch?v=kbKtFN71Lfs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Initial Definitions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The goal of this exercise is to break down the individual steps of the procedure into functions.\n",
+    "\n",
+    "To start we generate a list of points that represent our starting point and our verticies."
    ]
   },
   {
@@ -62,6 +80,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we build our point chooser which will select a random vertex."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -74,6 +99,13 @@
     "    point = fixedpts[int(roll)]\n",
     "    \n",
     "    return point"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we iterate on our points."
    ]
   },
   {
@@ -101,6 +133,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, we need to plot all of our points."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -124,9 +163,22 @@
     "    #plots the itterated points\n",
     "    plt.scatter(np.transpose(ittpts)[0],np.transpose(ittpts)[1],alpha=0.5, c='blue', edgecolors='none', s=2)\n",
     "    \n",
-    "    \n",
     "    plt.show()\n",
     "    return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate Fractal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we have all of our functions, we can build a central function that calls everything we might need to generate an image."
    ]
   },
   {
@@ -226,6 +278,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are some famous fractals that can be generated this way that are rooted in regular polygons. These are often named after the Polish mathematician Waclaw Sierpinski but have existed long before he categorized them. For example [Sierpinski's Triangle](https://en.wikipedia.org/wiki/Sierpi%C5%84ski_triangle) and [Sierpinski's Carpet](https://en.wikipedia.org/wiki/Sierpi%C5%84ski_carpet)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -292,6 +351,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fractals have, by definition, [fractional dimension](https://en.wikipedia.org/wiki/Fractal_dimension). We can model what that means here.\n",
+    "\n",
+    "Roughly, fractional dimension is a measure of how much space a fractal fills and in our case will fall between 1 (a line) and 2 (a plane)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -343,6 +411,15 @@
    },
    "source": [
     "#### Randomness on Large Scales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To explore the nature of randomness, we can use our same function but increase the number of verticies that are randomly generated to a significantly large number.\n",
+    "\n",
+    "This is an example of a [Monte Carlo method](https://en.wikipedia.org/wiki/Monte_Carlo_method)."
    ]
   },
   {
@@ -456,6 +533,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are many examples of fractals in nature. Here we have generated a fern. If we use the specific values below this is known as [Barnsley's Fern](https://en.wikipedia.org/wiki/Barnsley_fern)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -495,8 +579,8 @@
     "#### For Barnsley's Fern:\n",
     "Use the following values\n",
     "\n",
-    "|Percent|A|B|C|D|E|F|\n",
-    "|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|\n",
+    "|__Percent__|__A__|__B__|__C__|__D__|__E__|__F__|\n",
+    "|---|---|---|---|---|---|---|\n",
     "|0.01|0.0|0.0|0.0|0.16|0.0|0.0|\n",
     "|0.85|0.85|0.04|-0.04|0.85|0.0|1.60|\n",
     "|0.07|0.20|-0.26|0.23|0.22|0.0|1.60|\n",
